2004-10-25  Matthias Clasen  <mclasen@redhat.com>

	Add a public setting for button ordering (#74669, Owen Taylor)
	
	* gtk/gtksettings.c (gtk_settings_class_init): Add a 
	gtk-alternative-button-order setting.

	* gtk/gtkdialog.h: 
	* gtk/gtkdialog.c (gtk_alternative_dialog_button_order): A 
	getter for the alternative button order setting.
	* gtk/gtkdialog.c (gtk_dialog_set_alternative_button_order): 
	New function to install an alternative button order for a 
	dialog.

	* gtk/gtkfilesel.c (gtk_file_selection_init): 
	* gtk/gtkfontsel.c (gtk_font_selection_dialog_init): 
	* gtk/gtkmessagedialog.c (gtk_message_dialog_add_buttons): 
	* gtk/gtkcolorseldialog.c (gtk_color_selection_dialog_init): 
	* gtk/gtkfilechooserdefault.c (location_popup_handler): 
	Set up an alternative button order.
	
2004-10-25  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkimage.h: 
	* gtk/gtkimage.c (gtk_image_new_from_icon_name)
	(gtk_image_set_from_icon_name, gtk_image_get_icon_name)
	(gtk_image_set_pixel_size, gtk_image_get_pixel_size):  Add a
	new type GTK_IMAGE_ICON_NAME for named icons, update the size
	and content of stock, icon set and named icon images upon style
	changes, and allow to set a fixed pixel size for named icon
	images.  (#155688, James Henstridge)

	* tests/testimage.c: Test application for theming behaviour of
	different image types and for image dnd.

2004-10-24  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcellrenderercombo.c: Use G_DEFINE_TYPE, initialize the
	has_entry property, ref the model and add a finalizer.  (#156325,
	Olivier Andrieu)
	
Sun Oct 24 02:56:43 2004  Jonathan Blandford  <jrb@redhat.com>

	* docs/tools/widgets.c: Update GtkFileChooserButton doc shot.

2004-10-24  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkicontheme.c: Use the new g_key_file api in GLib.

	* gtk/Makefile.am (gtk_c_sources): Remove gtkiconthemeparser.[hc]

	* gtk/gtkiconthemeparser.[hc]: Removed.

	* gtk/gtkfilechooserdefault.c (location_popup_handler): If the