@@ -1,5 +1,9 @@
 2004-10-25  Matthias Clasen  <mclasen@redhat.com>
 
+	* tests/testicontheme.c (main): Use gtk_image_new_from_icon_name().
+
+2004-10-25  Matthias Clasen  <mclasen@redhat.com>
+
 	Add a public setting for button ordering (#74669, Owen Taylor)
 	
 	* gtk/gtksettings.c (gtk_settings_class_init): Add a 
@@ -68,7 +72,7 @@ Sun Oct 24 02:56:43 2004  Jonathan Blandford  <jrb@redhat.com>
 	Billy Biggs)	
 
 Sat Oct 23 16:14:37 2004  Søren Sandmann  <sandmann@redhat.com>
-tkIconThemeFile
+
 	* gtk/gtksequence.c (_gtk_sequence_node_insert_sorted): Remove
 	assertion that can get triggered by broken sort functions.
 
